<resources>
    <string name="app_name">WifiHeatmap</string>
    <string name="created_by">Created by swerly\n2017</string>
    <string name="map_subtitle">Find Location</string>
    <string name="zoom_subtitle">Zoom to Fit</string>
    <string name="name_subtitle">Name Heatmap</string>
    <string name="boundry_subtitle">Draw Boundry</string>
    <string name="heatmap_subtitle">Draw Heatmap</string>
    <string name="info_subtitle">App Info</string>
    <string name="help">Help</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="info">Info</string>
    <string name="feedback">Feedback</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="loading">Loading...</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="share_heatmap">Share Heatmap</string>
    <string name="share_loading">Initializing Sharing...</string>
    <string name="location_rationale">You must grant this app access to your location before we can
        easily find you on the map!\n\n Hit "OK" to grant this app permission.</string>
    <string name="location_granted">Location permissions granted.</string>
    <string name="location_denied">Location permissions denied.</string>
    <string name="location_finding">Finding your location now...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="no_location">Unable to obtain location. Make sure Location is enabled in Settings.</string>
    <string name="play_services_unavailable">Required Google Play Location services unavailable.</string>
    <string name="location_not_enabled">Location is not enabled. Cancelling request...</string>
    <string name="change_location_settings">Unable to start request for location. Please open settings and enable location services.</string>
    <string name="location_status_ok">Location found.</string>
    <string name="location_status_api_error">There was an error connecting to Google Play Services.</string>
    <string name="location_status_inaccurate">Location found, but may not be very accurate.</string>
    <string name="location_status_timeout">Location service time-out after 10 seconds. Could not get a location lock!</string>
    <string name="address_hint">Type address</string>
    <string name="empty_search_string">Please enter an address to search.</string>
    <string name="no_search_results">No search results found.</string>
    <string name="search_result_ok">Search result found. Zooming to address.</string>
    <string name="search_unavailable">Search Unavailable</string>
    <string name="search_unavailable_content">Please try again later.</string>
    <string name="unknown_search_error">Error using Google services. Please try again later.</string>
    <string name="geocode_other_error">Application error. Please contact developer.</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_content">You must be connected to the internet to use this application.</string>
    <string name="no_internet_search">Please connect to the internet to use search.</string>
    <string name="no_internet_location">Please connect to the internet to use location.</string>
    <string name="zoom_dialog_title">Room to Zoom?</string>
    <string name="zoom_dialog_content">Due to limitations with Google Maps, you may want to zoom more
            to fill the screen with the building of interest.\n\nWould you like to zoom more?</string>
    <string name="zoom">Zoom</string>
    <string name="save_heatmap">Save Heatmap</string>
    <string name="save">Save</string>
    <string name="naming_hint">Enter name</string>
    <string name="enter_name">Please enter a name for this heatmap.</string>
    <string name="removed"> has been removed.</string>
    <string name="delete_heatmap_title">Delete Heatmap?</string>
    <string name="delete_heatmap_content">You will not be able to undo this action. Are you sure you want to delete this heatmap?</string>
    <string name="connect_wifi">Connect Wifi</string>
    <string name="enable_wifi">Enable Wifi</string>
    <string name="connect_wifi_msg">You must connect to wifi to use this application. Please come back when you have connected to WiFi.</string>
    <string name="enable_wifi_msg">You must enable wifi to use this application. Please come back when you have enabled WiFi.</string>
    <string name="connect">Connect</string>
    <string name="enable">Enable</string>
    <string name="share_error">Error sharing image. Please try again!</string>
    <string name="no_wifi_text">You do not have a wifi connection.</string>
    <string name="settings">Settings</string>
    <string name="loading_heatmap_patient">Loading your heatmap....\n\nThis may take a few seconds, please be patient.</string>
    <string name="could_not_load_text">The data for your heatmap seems to be missing...\n\n</string>
    <string name="completed_to_next">When completed, hit the next button in the bottom right.</string>
    <string name="completed_to_save">When completed, hit the save button in the bottom right.</string>
    <string name="dont_show">Hide this help screen by default.</string>
    <string name="dont_show_under">(This screen can be accessed by pressing the help button in the upper right)</string>
    <string name="no_heatmaps">You have not added any heatmaps.\n\nClick the plus button to create one.</string>

    <string name="help_map_title">Finding Location</string>
    <string name="help_map_content">Find the location of the building that you want to map by searching an address or using your current location.\n\n
            Zoom, pan, and rotate to fill the screen as much as possible with the building of interest.</string>
    <string name="help_zoom_title">Zooming</string>
    <string name="help_zoom_content">Zoom, pan, and rotate to fill the screen as much as possible with the building of interest.</string>
    <string name="help_heatmap_title">Drawing Heatmap</string>
    <string name="help_heatmap_content">Place your finger on the screen where you are located in the location.\n\n
            Walk around slowly while moving your finger along the path you\'re walking around the location.</string>
    <string name="more_signal_info_title">Signal Info</string>

    <string name="signal_info">More Signal Info</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="level_one">&gt; -50dB</string>
    <string name="level_two">-60dB</string>
    <string name="level_three">-70dB</string>
    <string name="level_four">-80dB</string>
    <string name="level_five">&lt; -90dB</string>

    <string name="sig_desc_1">Amazing, max achievable signal strength. The client can only be a few feet from the AP to achieve this. Not typical or desirable in the real world.</string>
    <string name="sig_desc_2">Very good, minimum signal strength for applications that require very reliable, timely delivery of data packets. (VoIP, video streaming)</string>
    <string name="sig_desc_3">Okay, minimum signal strength for reliable packet delivery. (Email, web)</string>
    <string name="sig_desc_4">Not good, minimum signal strength for basic connectivity. Packet delivery may be unreliable.</string>
    <string name="sig_desc_5">Unusable, approaching or drowning in the noise floor. Any functionality is highly unlikely.</string>

    <string name="woops">Oh no!</string>
    <string name="error_data_load">There was an error loading some data, sorry about that!\n\nPlease try again.</string>

    <string name="rating_title">Rate this app</string>
    <string name="rating_content">If you like the app, please leave a rating on the Play Store.\n\n
        If you don\'t like app, please send me some feedback so I can improve it!</string>
    <string name="dont_show_again">Don\'t show again.</string>
    <string name="rate">Rate</string>

</resources>
