<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/sort" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:title="@string/feedback"/>

    <item
        android:id="@+id/action_info"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/info"/>

</menu>