<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_location"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_my_location_black_24dp"
        android:title="@string/location"/>

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help"/>

</menu>