<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_close_button"
        android:text="@string/close"
        android:theme="@style/TealButton"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:animateLayoutChanges="true"
        android:layout_gravity="center_horizontal"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_show"
        android:id="@+id/default_show_checkbox"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dont_show_bottom_text"
        android:text="@string/dont_show_under"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>