<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/help_title"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="DEFAULT_TITLE"
        android:id="@+id/help_title"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/help_title"
        android:textAlignment="center"
        android:id="@+id/help_content"
        android:text="DEFAULT_TEXT"
        android:textSize="@dimen/help_text"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@id/help_content"
        android:textAlignment="center"
        android:id="@+id/when_done_text"
        android:text="DEFAULT_TEXT"
        android:textSize="@dimen/help_text"
        android:textColor="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_close_button"
        android:text="@string/close"
        android:theme="@style/TealButton"
        android:layout_above="@+id/default_show_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:animateLayoutChanges="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_show"
        android:id="@+id/default_show_checkbox"
        android:layout_above="@id/dont_show_bottom_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:buttonTint="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dont_show_bottom_text"
        android:layout_alignParentBottom="true"
        android:text="@string/dont_show_under"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
</RelativeLayout>